PPN fikser behandlingsresultattype (#6120)
* PPN fikser behandlingsresultattype

* rydde

* Forbedrer kode etter code review