@@ -2,7 +2,6 @@ package no.nav.k9.sak.ytelse.pleiepengerbarn.vilkår;
 
 import java.time.DayOfWeek;
 import java.util.EnumMap;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.NavigableSet;
@@ -44,11 +43,11 @@ import no.nav.pleiepengerbarn.uttak.kontrakter.Endringsstatus;
 import no.nav.pleiepengerbarn.uttak.kontrakter.Uttaksplan;
 
 
-public class PleiepengerVilkårsPerioderTilVurderingTjeneste implements VilkårsPerioderTilVurderingTjeneste {
+public abstract class PleiepengerVilkårsPerioderTilVurderingTjeneste implements VilkårsPerioderTilVurderingTjeneste {
 
     private final PåTversAvHelgErKantIKantVurderer erKantIKantVurderer = new PåTversAvHelgErKantIKantVurderer();
 
-    private Map<VilkårType, VilkårsPeriodiseringsFunksjon> vilkårsPeriodisering = new HashMap<>();
+    private Map<VilkårType, VilkårsPeriodiseringsFunksjon> vilkårsPeriodisering;
     private VilkårUtleder vilkårUtleder;
     private SøktePerioder søktePerioder;
     private VilkårResultatRepository vilkårResultatRepository;
@@ -136,7 +135,7 @@ public class PleiepengerVilkårsPerioderTilVurderingTjeneste implements Vilkårs
                 .filter(it -> perioder.stream().anyMatch(it::overlapper))
                 .map(DatoIntervallEntitet::toLocalDateInterval)
                 .map(it -> new LocalDateSegment<>(it, true))
-                .collect(Collectors.toList()))
+                .toList())
             .compress();
 
         return relevantTidslinje.toSegments()
@@ -275,7 +274,7 @@ public class PleiepengerVilkårsPerioderTilVurderingTjeneste implements Vilkårs
             .map(entry -> new LocalDateSegment<Boolean>(entry.getKey().getFom(), entry.getKey().getTom(), Boolean.TRUE))
             .toList();
 
-        return new LocalDateTimeline<Boolean>(segments);
+        return new LocalDateTimeline<>(segments);
     }
 
     private LocalDateTimeline<Boolean> utledUtvidetPeriodeForSykdom(BehandlingReferanse referanse) {
@@ -298,11 +297,6 @@ public class PleiepengerVilkårsPerioderTilVurderingTjeneste implements Vilkårs
     @Override
     public KantIKantVurderer getKantIKantVurderer() {
         return erKantIKantVurderer;
-    }
-
-    @Override
-    public Set<VilkårType> definerendeVilkår() {
-        return Set.of(VilkårType.MEDISINSKEVILKÅR_UNDER_18_ÅR, VilkårType.MEDISINSKEVILKÅR_18_ÅR);
     }
 
     @Override
